--- a/color.css
+++ b/color.css
@@ -47,11 +47,11 @@ nav
 
 .image
 {
-    padding-left: 10px;
+    /*padding-left: 3px;*/
     width: 16%;
     height: 16%;
     position: sticky;
-    left: 150px;
+    left: 100px;
 }
 
 a
