--- a/color.css
+++ b/color.css
@@ -39,8 +39,8 @@ nav
 
 .image9
 {
-    width: 14%;
-    height: 14%;
+    width: 100px;
+    height: 100px;
     position: sticky;
     left: 50px;
 }
@@ -48,8 +48,8 @@ nav
 .image
 {
     padding-left: 5px;
-    width: 14%;
-    height: 14%;
+    width: 100px;
+    height: 100px;
     position: sticky;
     left: 95px;
 }
