--- a/color.css
+++ b/color.css
@@ -39,19 +39,19 @@ nav
 
 .image9
 {
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     position: sticky;
-    left: 50px;
+    left: 45px;
 }
 
 .image
 {
-    padding-left: 5px;
-    width: 100px;
-    height: 100px;
+    padding: 3px;
+    width: 150px;
+    height: 150px;
     position: sticky;
-    left: 95px;
+    left: 110px;
 }
 
 a
