--- a/color.css
+++ b/color.css
@@ -41,7 +41,7 @@ nav
 {
     width: 150px;
     height: 150px;
-    position: sticky;
+    position: relative;
     left: 100px;
 }
 
@@ -50,7 +50,7 @@ nav
     padding: 3px;
     width: 150px;
     height: 150px;
-    position: sticky;
+    position: relative;
     left: 40px;
 }
 
