--- a/color.css
+++ b/color.css
@@ -41,11 +41,11 @@ nav
 {
     width: 150px;
     height: 150px;
-    position: relative;
-    left: 100px;
+    position: sticky;
+    left: 40px;
 }
 
-.image
+/*.image
 {
     padding: 3px;
     width: 150px;
@@ -53,6 +53,7 @@ nav
     position: relative;
     left: 40px;
 }
+*/
 
 a
 {
