--- a/color.css
+++ b/color.css
@@ -30,10 +30,11 @@ nav
 
 .main9
 {
+    padding: 10px;
     width: 20%;
     height: 20%;
     position: sticky;
-    left: 200px;
+    left: 900px;
     
 }
 
