--- a/color.css
+++ b/color.css
@@ -33,24 +33,25 @@ nav
     width: 20%;
     height: 20%;
     position: sticky;
-    left: 350px;
+    left: 375px;
+    bottom: 10px;
     
 }
 
 .image9
 {
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 175px;
     position: sticky;
     left: 40px;
 }
 
 .image
 {
-    width: 150px;
-    height: 150px;
+    width: 175px;
+    height: 175px;
     position: relative;
-    left: 100px;
+    left: 80px;
 }
 
 
