--- a/color.css
+++ b/color.css
@@ -30,11 +30,11 @@ nav
 
 .main9
 {
-    width: 20%;
-    height: 20%;
+    width: 140;
+    height: 531;
     position: absolute;
     left: 425px;
-    bottom: 20px;
+    bottom: 150px;
     
 }
 
