--- a/color.css
+++ b/color.css
@@ -30,8 +30,8 @@ nav
 
 .main9
 {
-    width: 140;
-    height: 531;
+    width: 25%;
+    height: 25%;
     position: relative;
     left: 425px;
     bottom: 20px;
