--- a/color.css
+++ b/color.css
@@ -32,7 +32,7 @@ nav
 {
     width: 25%;
     height: 25%;
-    position: relative;
+    position: sticky;
     left: 425px;
     bottom: 20px;
     
