--- a/color.css
+++ b/color.css
@@ -54,6 +54,14 @@ nav
     left: 65px;
 }
 
+.image6
+{
+    width: 175px;
+    height: 175px;
+    position: relative;
+    left: 40px;
+    top: 60px;
+}
 
 a
 {
