--- a/color.css
+++ b/color.css
@@ -56,11 +56,11 @@ nav
 
 .image6
 {
-    width: 175px;
-    height: 175px;
+    width: 150px;
+    height: 150px;
     position: relative;
     left: 40px;
-    top: 50%;
+    top: 100px;
 }
 
 a
