--- a/color.css
+++ b/color.css
@@ -33,7 +33,7 @@ nav
 {
     width: 25%;
     height: 25%;
-    position: absolute;
+    position: relative;
     top: 50px;
     left: 425px;
     
