--- a/color.css
+++ b/color.css
@@ -60,7 +60,7 @@ nav
 {
     width: 150px;
     height: 150px;
-    position: relative;
+    position: absolute;
     top: 80px;
     left: 40px;
     
