--- a/color.css
+++ b/color.css
@@ -60,8 +60,8 @@ nav
 {
     width: 150px;
     height: 150px;
-    position: absolute;
-    bottom: 150px;
+    position: relative;
+    top: 80px;
     left: 40px;
     
 }
