--- a/color.css
+++ b/color.css
@@ -58,10 +58,10 @@ nav
 
 .image6
 {
-    padding: auto;
     width: 150px;
     height: 150px;
     position: relative;
+    bottom: -80px;
     left: 40px;
     
 }
